--- a/[cfx-default]/[gameplay]/chat/html/index.css
+++ b/[cfx-default]/[gameplay]/chat/html/index.css
@@ -76,7 +76,7 @@ em {
   display: flex;
   align-items: stretch;
   width: 100%;
-  background-color: rgba(44, 62, 80, 1.0);
+  background-color: rgb(255, 0, 64);
 }
 
 .chat-hide-state {
