--- a/[qb]/qb-inventory/html/css/main.css
+++ b/[qb]/qb-inventory/html/css/main.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@300&display=swap');
 p {
 	margin: 0 !important;
 	user-select: none;
@@ -48,6 +47,7 @@ body {
 .inv-container {
 	position: absolute;
 	width: 100%;
+	background: rgb(0 0 0 / 75%);
 	height: 100%;
 }
 
@@ -97,7 +97,7 @@ body {
 	text-align: left;
 	font-size: 1.1vh;
 	line-height: 1.8vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .inv-options {
@@ -156,7 +156,7 @@ body {
 	color: rgb(255, 255, 255);
     text-align: center;
     font-size: 1.55vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Serif Khmer', serif;
     outline: none;
 	background-color: #000000;
 }
@@ -176,7 +176,7 @@ body {
 .ammo-info-header {
 	width: 100%;
 	color: white;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	background-color: rgba(0, 0, 0, 0.192);
 	font-size: 1.vh;
 	padding: .4vh;
@@ -186,7 +186,7 @@ body {
 .ammo-info {
 	position: relative;
 	color: white;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-weight: 200;
 	font-size: 1.vh;
 	margin-left: .8vh;
@@ -209,7 +209,7 @@ body {
 	font-weight: 900;
     background-color: #000000;
     cursor: pointer;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	border-radius: 15px;
 }
 
@@ -241,7 +241,7 @@ body {
 	font-size: 1.2vh;
 	transition: background-color .1s linear;
 	font-weight: 900;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .btn-combine>p {
@@ -250,7 +250,7 @@ body {
 	line-height: 48px;
 	text-transform: uppercase;
 	font-size: 1.1vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	background-color: rgb(0 0 0 / 20%);
 }
 
@@ -283,7 +283,7 @@ body {
 	padding: 3px;
 	text-align: center;
 	letter-spacing: 1px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .item-slot-quality {
@@ -337,6 +337,7 @@ body {
 	position: absolute;
 	left: 14.5%;
 	top: 22.2%;
+	z-index: 88;
 }
 
 #player-inv-label {
@@ -344,7 +345,7 @@ body {
 	color: white;
 	font-size: 16px;
 	font-style: italic;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-weight: bold;
 	letter-spacing: 0.2vh;
 	bottom: 0px;
@@ -356,7 +357,7 @@ body {
 	color: white;
 	font-size: 12px;
 	font-weight: 900;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	letter-spacing: 0.2vh;
 	float: left;
 }
@@ -366,7 +367,7 @@ body {
 	color: white;
 	font-size: 16px;
 	font-style: italic;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-weight: bold;
 	letter-spacing: 0.2vh;
 	bottom: 0px;
@@ -378,7 +379,7 @@ body {
 	color: white;
 	font-size: 12px;
 	font-weight: 900;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	letter-spacing: 0.2vh;
 	float: left;
 }
@@ -392,17 +393,18 @@ body {
 .player-inv-weight>p {
 	color: white;
 	font-size: 12px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .other-inv-info {
 	position: absolute;
 	left: 56%;
 	top: 22.2%;
+	z-index: 88;
 }
 
 .ply-iteminfo-container {
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	display: none;
 	position: absolute;
 	bottom: 3%;
@@ -417,7 +419,7 @@ body {
 .item-info-title {
     text-transform: uppercase;
     font-weight: 900;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Serif Khmer', serif;
     font-size: 1.4vh;
     color: #ffffff;
     padding-top: 1px;
@@ -425,7 +427,7 @@ body {
 
 .item-info-line {
 	position: absolute;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	width: 100%;
 	background-color: white;
 	height: 0vh;
@@ -434,7 +436,7 @@ body {
 .item-info-description {
 	text-transform: uppercase;
 	font-size: 1vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	color: white;
 	padding-top: .5vh;
 }
@@ -479,7 +481,7 @@ body {
 
 #itembox-action>p {
 	font-size: 10px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 #itembox-label {
@@ -527,7 +529,7 @@ body {
 	color: white;
 	padding: 3px;
 	font-size: 10px;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 #requiredItem-label {
@@ -567,7 +569,7 @@ body {
 	text-align: left;
 	font-size: 1.1vh;
 	line-height: 1.8vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .z-hotbar-item-slot {
@@ -612,7 +614,7 @@ body {
 	font-size: 11.5px;
 	text-align: center;
 	text-transform: lowercase;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-variant: small-caps;
 }
 
@@ -680,7 +682,7 @@ body {
 	bottom: 0;
 	right: 0;
 	margin: .3vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .ammo-box-amount {
@@ -722,7 +724,7 @@ body {
 	margin: 5vh;
 	font-size: 3vh;
 	color: rgb(255, 255, 255);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .weapon-attachments-container-description {
@@ -731,7 +733,7 @@ body {
 	top: 5vh;
 	font-size: 1.7vh;
 	color: rgba(255, 255, 255, 0.8);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .weapon-attachments-container-details {
@@ -740,7 +742,7 @@ body {
 	top: 9vh;
 	font-size: 1.4vh;
 	color: rgba(255, 255, 255, 0.8);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 }
 
 .weapon-attachments-container-detail-durability {
@@ -780,7 +782,7 @@ body {
 	left: 0;
 	margin: 5vh;
 	color: rgba(255, 255, 255, 0.8);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-size: 1.4vh
 }
 
@@ -815,7 +817,7 @@ body {
 	text-align: center;
 	text-transform: uppercase;
 	line-height: 1.9vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	font-weight: 100;
 }
 
@@ -917,7 +919,7 @@ body {
 	text-align: center;
 	line-height: 6vh;
 	color: white;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Serif Khmer', serif;
 	transition: .05s linear;
 }
 
