change some label to khmer

--- a/[qb]/qb-doorlock/html/style.css
+++ b/[qb]/qb-doorlock/html/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor&display=swap');
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Kdam Thmor', sans-serif;
 }
 
 .textInfo {
